refactor - fixed model